src/objects/Region_Analitics__c.object
<CustomObject>
    <description>This Region Analytics changes done for full deployment demo -for Fortherecord</description>
    <fields>
        <fullName>City__c</fullName>
        <description>This is Minneapolis City being modified in the demo webinar .</description>
        <inlineHelpText>Test for Sunpower</inlineHelpText>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This is state change in the GIT auto-commit demo</description>
        <label>State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>This is Zip Code description modified in GIT auto-commit demo</description>
        <label>Zip Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <description>This is currency description in GIT auto-commit demo</description>
        <label>currency</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <label>Region Analytics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Analitics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Region Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>